[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchserver"
version = "0.1.2"
description = "Python live reload server"
readme = "README.md"
license = "MIT"
authors = [
    { name="Tired Fox", email="zboehm104@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "click",
    "watchdog",
]

[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/Tired-Fox/watchserver"
"Website" = "https://tired-fox.github.io/watchserver/"

[project.scripts]
liveserver = "liveserver.__main__:serve"

# [project.entry-points.""]

[tool.black]
line-length = 100
target-version = ["py37"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true