[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchserver"
version = "0.1.9"
authors = [
    { name="Tired Fox", email="zboehm104@gmail.com"}
]
description="Python live reload server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
watchserver = "watchserver.__main__:serve"
# moph = "mophidian.__main__:cli"

[project.urls]
"Homepage" = "https://github.com/Tired-Fox/watchserver"
"Documentation" = "https://tired-fox.github.io/watchserver"

[tool.black]
line-length = 100
target-version = ["py37"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true

